<resources>
    <string name="app_name">PrimeAero</string>

    <!-- Titles -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_uam">UAM</string>
    <string name="title_settings">Settings</string>
    <string name="title_call">Call</string>"
    <string name="title_subscription">Subscription</string>"

    <!--Descriptions -->
    <string name="logo_description">Logo for PrimeAero</string>"
    <string name="call_button_description"> Call button for UAM flights</string>
    <string name="settings_button_description"> Settings button for UAM flights</string>
    <string name="call_description">Call a UAM</string>
    <string name="subscription_button_description">Subscription button</string>
    <string name="find_vertiport_button_description">Find Vertiport button</string>
    <string name="schedule_ride_button_description">Schedule Ride button</string>
    <string name="find_vertiport_map_description">Find Vertiport Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Fragment texts -->
    <string name="uam_fragment_text">UAM Fragment</string>
    <string name="settings_fragment_text">Settings Fragment</string>"
    <string name="call_fragment_text">Call Fragment</string>
</resources>