<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.primeaero.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <action
        android:id="@+id/action_home_to_uam"
        app:destination="@id/navigation_uam" />
    <action
        android:id="@+id/action_home_to_settings"
        app:destination="@id/navigation_settings" />
    <action
        android:id="@+id/action_home_to_subscription"
        app:destination="@id/navigation_subscription" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.primeaero.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.primeaero.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_uam"
        android:name="com.example.primeaero.ui.uam.UAMFragment"
        android:label="@string/title_uam"
        tools:layout="@layout/fragment_uam" />
    <action
        android:id="@+id/action_home_to_call"
        app:destination="@id/navigation_call" />
    <action
        android:id="@+id/action_home_to_findVertiport"
        app:destination="@id/navigation_findVertiport" />
    <action
        android:id="@+id/action_home_to_scheduleRide"
        app:destination="@id/navigation_schedule_ride" />

    <fragment
        android:id="@+id/navigation_schedule_ride"
        android:name="com.example.primeaero.ui.scheduleRide.ScheduleRideFragment"/>
    <fragment
        android:id="@+id/navigation_findVertiport"
        android:name="com.example.primeaero.ui.findVertiport.FindVertiportFragment"/>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.primeaero.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/navigation_call"
        android:name="com.example.primeaero.ui.callUAM.CallFragment"
        android:label="@string/title_call"
        tools:layout="@layout/fragment_call"/>
    <fragment
        android:id="@+id/navigation_subscription"
        android:name="com.example.primeaero.ui.subscription.SubscriptionFragment"
        android:label="@string/title_subscription"
        tools:layout="@layout/fragment_subscription"/>

</navigation>