<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B0B0B"
    tools:context=".ui.uam.UAMFragment">

    <TextView
        android:id="@+id/text_uam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uam_fragment_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintHorizontal_bias="0.5"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/callUAM"
        android:layout_width="125dp"
        android:layout_height="119dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/call_description"
        android:scaleType="fitCenter"
        android:src="@drawable/callphone"
        android:text="@string/call_fragment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Call"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/callUAM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/findVertiport"
        android:layout_width="125dp"
        android:layout_height="136dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/find_vertiport_button_description"
        android:src="@drawable/findveriport"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <ImageButton
        android:id="@+id/scheduleRide"
        android:layout_width="123dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/schedule_ride_button_description"
        android:src="@drawable/scheduleride"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

</androidx.constraintlayout.widget.ConstraintLayout>